# data-collaboration-analysis

./: .gitignore  Makefile  README.md  main.py  main_temp_統合非可能非線形の検証.py  pyproject.toml
config/: config.py  config_logger.py  exp001.yaml  timing.py
experiments/: experiment.py
output/0913/: an_big_csv.ipynb
output/exp004/: plot_note.ipynb
output/exp005/: plot_note copy.ipynb  plot_note.ipynb
src/: colored_excel.xlsx  data_collaboration.py  data_collaboration_copy.py  data_collaboration_l.py  federated_learning.py  institutional_analysis.py  load_data.py  load_data_old.py  metrics_mean_by_lwalpha.xlsx  model.py  model__.py  model_old_temp.py  notebook.ipynb  paths.py  suetake_debug.ipynb  summary_results.txt  train_val.py  triheader_nonlinear_6cols_colored.xlsx  triheader_nonlinear_6cols_colored_bside.xlsx  triheader_output_0830.xlsx  utils.py  提案手法_mean_by_dataset_lwalpha.xlsx
src/old/: data_collaboration copy.py
yanagi_ver/: train_val_yanagi.py
実験用ノートブック/: 非線形性と精度.ipynb
