[tool.poetry]
name = "datacollaborationanalysis"
version = "0.1.0"
description = ""
authors = ["tomos7231 <tomobake0023@icloud.com>"]

[tool.poetry.dependencies]
# gurobipy は PyPI にないため pip install を使って別途インストールしてください
#gurobipy = "*"  # ← 実際には機能しない
python = ">=3.9,<3.13"
pandas = "^2.0.1"
numpy = "^1.24.3"
seaborn = "^0.12.2"
lightgbm = "^3.3.5"
xgboost = "^1.7.5"
catboost = "^1.1.1"
tqdm = "^4.65.0"
# surprise = "^0.1"
category-encoders = "^2.6.0"
optuna = "^3.1.1"
pathlib = "^1.0.1"
scikit-learn = "^1.2.2"
matplotlib = "^3.7.1"
PyYAML = "^6.0"
Cython = "^0.29.34"
# pyfm = "^0.2.4"
scipy = "^1.11.2"
notebook = "^7.4.3"
ipykernel = "^6.29.5"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.22.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
autoflake = "^2.1.1"
black = "^23.3.0"

[tool.black]
line-length = 120

[tool.isort]
line_length = 120
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
